Coffee in src, compiled to lib, symlinked to public/ if needed.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Ski madness</title>
+    <script src="javascripts/jquery-1.4.2.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/raphael-min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/application.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <h1>Ski madness</h1>
