Got something that resembles a skiier going something that resembles a hill.

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
+<html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8">
     <title>Ski madness</title>
+    <style type="text/css" media="screen">
+      body {background-color:#333}
+    </style>
+  </head>
+  <body>
+    <div id="game"></div>
     <script src="javascripts/jquery-1.4.2.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/raphael-min.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/application.js" type="text/javascript" charset="utf-8"></script>
-  </head>
-  <body>
-    <h1>Ski madness</h1>
-    <div id="game"></div>
   </body>
 </html>
